--- a/Sistem-Vehiculos API/Sistem-Vehiculos API.csproj
+++ b/Sistem-Vehiculos API/Sistem-Vehiculos API.csproj
@@ -6,6 +6,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\js\deleteDialog.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\js\deleteDialog.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.8" />
